<resources>
    <string name="app_name">QuickCalc</string>

    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_Equals">=</string>
    <string name="key_Dot">·</string>
    <string name="key_Sum">+</string>
    <string name="key_Minus">−</string>
    <string name="key_Multiplication">×</string>
    <string name="key_Division">÷</string>
    <string name="key_Mod">%</string>
    <string name="key_AC">AC</string>
    <string name="key_BracketLeft">(</string>
    <string name="key_BracketRight">)</string>

    <string name="ivMenu_ContentDescription">Menu icon</string>
    <string name="ibRemove_ContentDescription">Key remove icon</string>

    <string name="tvSettingsLabel">Settings</string>
    <string name="tvThemeLabel">Theme</string>

</resources>
