<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/customColorBrandDark"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".view.CalculatorActivity">

    <FrameLayout
        style="?attr/customDisplayStyle"
        android:id="@+id/flMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/ivMenu_ContentDescription"
            app:srcCompat="@drawable/ic_menu" />

    </FrameLayout>

    <TextView
        style="?attr/customDisplayStyle"
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:gravity="bottom|end"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:maxLength="32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="5+2/3" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonAC"
                style="?attr/customButtonStyleWarning"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/key_AC" />

            <ImageButton
                android:id="@+id/buttonBack"
                style="?attr/customButtonStyleSpecial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_backspace"
                android:tint="?attr/customColorAccent"
                android:contentDescription="@string/ibRemove_ContentDescription"/>

            <Button
                android:id="@+id/buttonDivide"
                style="?attr/customButtonStyleSpecial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_Division" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_9" />

            <Button
                android:id="@+id/buttonMultiply"
                style="?attr/customButtonStyleSpecial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_Multiplication" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_6" />

            <Button
                android:id="@+id/buttonMinus"
                style="?attr/customButtonStyleSpecial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_Minus" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_3" />

            <Button
                android:id="@+id/buttonSum"
                style="?attr/customButtonStyleSpecial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_Sum" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="@string/key_0" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_Dot" />

            <Button
                android:id="@+id/buttonEquals"
                style="?attr/customButtonStyleSpecial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/key_Equals" />

        </TableRow>

    </TableLayout>
</LinearLayout>